[tool.poetry]
name = "hillman"
version = "0.1.0"
description = ""
authors = ["Brian Jinwright <brian@ipoots.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
docb = "^1.1"
jinja2 = "^2.10"
swaggyp = "^0.1.0"
unipath = "^1.1"
paginate = "^0.5.6"
click = "^7.0"
aws-xray-sdk = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
